# libvotv

./: CMakeLists.txt  README.md
include/: CommonUtil.hpp  FunctionUtil.hpp  ObjectLifetimeTracker.hpp  StructUtil.hpp  game.hpp
include/engine/include/: CharacterMovement.hpp
include/engine/include/enums/: EMovementMode.hpp
include/engine/src/: CharacterMovement.cpp
include/game/: MainPlayer.hpp
